--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 
   <title>Sunset's Landing Page</title>
 
+  <meta name="description" content="Sunset's Landing Page">
+  <meta name="author" content="Sunset">
+  <meta property="og:type" content="website">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:site_name" content="Sunset's Landing Page">
+  <meta property="og:title" content="Sunset's Landing Page">
+  <meta property="og:url" content="https://www.lwd-temp.top/">
+  <meta property="og:description" content="Sunset's Landing Page">
+
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
   <link href="https://unpkg.com/@fortawesome/fontawesome-free@6.4.2/css/all.css" rel="stylesheet">
