--- a/index.html
+++ b/index.html
@@ -20,9 +20,142 @@
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
   <link href="https://unpkg.com/@fortawesome/fontawesome-free@6.4.2/css/all.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/reset.css">
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="css/themes/white-grey.css">
+  <!--<link rel="stylesheet" href="css/reset.css">-->
+  <style>
+    /* Minimal CSS Reset */
+
+    html {
+      box-sizing: border-box;
+      font-size: 12px;
+    }
+
+    *,
+    *:before,
+    *:after {
+      box-sizing: inherit;
+    }
+
+    body,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
+    p,
+    ol,
+    ul {
+      margin: 0;
+      padding: 0;
+      font-weight: normal;
+    }
+
+    ol,
+    ul {
+      list-style: none;
+    }
+
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+  </style>
+  <!--<link rel="stylesheet" href="css/styles.css">-->
+  <style>
+    /* Typography */
+
+    html {
+      font-family: 'Roboto', sans-serif;
+    }
+
+    @media (min-width: 576px) {
+      html {
+        font-size: 14px;
+      }
+    }
+
+    @media (min-width: 768px) {
+      html {
+        font-size: 16px;
+      }
+    }
+
+    @media (min-width: 992px) {
+      html {
+        font-size: 18px;
+      }
+    }
+
+    @media (min-width: 1200px) {
+      html {
+        font-size: 20px;
+      }
+    }
+
+    .icons-social i {
+      font-size: 3em;
+    }
+
+    /* Custom Styles */
+
+    main {
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+      justify-content: center;
+      padding: 0 30px;
+      text-align: center;
+    }
+
+    main>.intro {
+      font-family: 'Reem Kufi', sans-serif;
+      font-size: 3.75em;
+      font-weight: 600;
+    }
+
+    main>.tagline {
+      font-size: 1.5rem;
+      margin: 1.5rem 0;
+      font-weight: 100;
+    }
+
+    .icons-social i {
+      padding: 10px;
+    }
+
+    .icons-social a {
+      text-decoration: none;
+    }
+
+    .devto {
+      margin-bottom: -0.20rem;
+    }
+
+    .devto svg {
+      margin-bottom: -0.20rem;
+      margin-left: 0.675rem;
+      ;
+      width: 2.65rem;
+      height: 2.65rem;
+    }
+  </style>
+  <!--<link rel="stylesheet" href="css/themes/white-grey.css">-->
+  <style>
+    /* Theme */
+
+    main {
+      background: #485564;
+      color: #FAFAFA;
+    }
+
+    .icons-social a {
+      color: #FAFAFA;
+    }
+
+    .icons-social a svg path {
+      fill: #FAFAFA;
+    }
+  </style>
 
   <script async src="https://sense.lwd-temp.top/sense" data-website-id="ad86100d-eaf0-4b30-af01-520917413f3d"></script>
 </head>
