--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@
         <span class="sr-only">Blog</span>
       </a>
       <a target="_blank" href="https://github.com/lwd-temp">
-        <i class="fab fa-github" aria-hidden="true" title="GitHub"></i>
+        <i class="fa-brands fa-github" aria-hidden="true" title="GitHub"></i>
         <span class="sr-only">GitHub</span>
       </a>
       <a target="_blank" href="https://gitlab.com/lwd-temp">
-        <i class="fab fa-gitlab" aria-hidden="true" title="GitLab"></i>
+        <i class="fa-brands fa-gitlab" aria-hidden="true" title="GitLab"></i>
         <span class="sr-only">GitLab</span>
       </a>
       <a target="_blank"
@@ -190,6 +190,10 @@
       <a target="_blank" href="https://contact.lwd-temp.top/">
         <i class="fa-solid fa-bolt-lightning" aria-hidden="true" title="Quick Contact Me Form"></i>
         <span class="sr-only">Quick Contact Me Form</span>
+      </a>
+      <a target="_blank" href="https://status.lwd-temp.top/">
+        <i class="fa-solid fa-heart-pulse" aria-hidden="true" title="Service Status"></i>
+        <span class="sr-only">Service Status</span>
       </a>
     </div>
   </main>
