Friends & Useful Links

--- a/index.html
+++ b/index.html
@@ -166,34 +166,62 @@
     <div class="tagline">Amateur independent developer | Windows & Linux user | Gamer</div>
     <!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
     <div class="icons-social">
-      <a target="_blank" href="https://jekyll.lwd-temp.top/">
+      <a target="_blank" href="https://jekyll.lwd-temp.top/" rel="nofollow noopener noreferrer me" itemprop="sameAs">
         <i class="fa-solid fa-blog" aria-hidden="true" title="Blog"></i>
         <span class="sr-only">Blog</span>
       </a>
-      <a target="_blank" href="https://github.com/lwd-temp">
+      <a target="_blank" href="https://github.com/lwd-temp" rel="nofollow noopener noreferrer me" itemprop="sameAs">
         <i class="fa-brands fa-github" aria-hidden="true" title="GitHub"></i>
         <span class="sr-only">GitHub</span>
       </a>
-      <a target="_blank" href="https://gitlab.com/lwd-temp">
+      <a target="_blank" href="https://gitlab.com/lwd-temp" rel="nofollow noopener noreferrer me" itemprop="sameAs">
         <i class="fa-brands fa-gitlab" aria-hidden="true" title="GitLab"></i>
         <span class="sr-only">GitLab</span>
       </a>
       <a target="_blank"
-        href="https://keyserver.ubuntu.com/pks/lookup?op=get&amp;search=0xafce72de15a64a20f9e731bbc8d10d21fdcb405a">
+        href="https://keyserver.ubuntu.com/pks/lookup?op=get&amp;search=0xafce72de15a64a20f9e731bbc8d10d21fdcb405a"
+        rel="nofollow noopener noreferrer me" itemprop="sameAs">
         <i class="fa-solid fa-key" aria-hidden="true" title="PGP Public Key"></i>
         <span class="sr-only">PGP Public Key</span>
       </a>
-      <a target="_blank" href="mailto:i@lwd-temp.top">
+      <a target="_blank" href="mailto:i@lwd-temp.top" rel="nofollow noopener noreferrer me" itemprop="sameAs">
         <i class="fa-solid fa-envelope" aria-hidden="true" title="Email"></i>
         <span class="sr-only">Email</span>
       </a>
-      <a target="_blank" href="https://contact.lwd-temp.top/">
+      <a target="_blank" href="https://contact.lwd-temp.top/" rel="nofollow noopener noreferrer me" itemprop="sameAs">
         <i class="fa-solid fa-bolt-lightning" aria-hidden="true" title="Quick Contact Me Form"></i>
         <span class="sr-only">Quick Contact Me Form</span>
       </a>
-      <a target="_blank" href="https://status.lwd-temp.top/">
+      <a target="_blank" href="https://status.lwd-temp.top/" rel="nofollow noopener noreferrer me" itemprop="sameAs">
         <i class="fa-solid fa-heart-pulse" aria-hidden="true" title="Service Status"></i>
         <span class="sr-only">Service Status</span>
+      </a>
+    </div>
+    <div class="tagline">Friends & Useful Links</div>
+    <div class="icons-social">
+      <a target="_blank" href="https://massgrave.dev/" rel="nofollow noopener noreferrer">
+        <i class="fa-brands fa-windows" aria-hidden="true" title="Microsoft Installation & Activation"></i>
+        <span class="sr-only">Microsoft Installation & Activation</span>
+      </a>
+      <a target="_blank" href="https://hmcl.huangyuhui.net/" rel="nofollow noopener noreferrer">
+        <i class="fa-solid fa-cube" aria-hidden="true" title="HMCL Launcher"></i>
+        <span class="sr-only">HMCL Launcher</span>
+      </a>
+      <a target="_blank" href="https://cyberchef.lwd-temp.top/" rel="nofollow noopener noreferrer">
+        <i class="fa-regular fa-chess-rook" aria-hidden="true" title="CyberChef"></i>
+        <span class="sr-only">CyberChef</span>
+      </a>
+      <a target="_blank" href="https://www.zaobao.com/" rel="nofollow noopener noreferrer">
+        <i class="fa-solid fa-newspaper" aria-hidden="true" title="联合早报"></i>
+        <span class="sr-only">联合早报</span>
+      </a>
+      <a target="_blank" href="https://www.kaspersky.com/free-antivirus" rel="nofollow noopener noreferrer">
+        <i class="fa-solid fa-k" aria-hidden="true" title="Kaspersky Free Antivirus"></i>
+        <span class="sr-only">Kaspersky Free Antivirus</span>
+      </a>
+      <a target="_blank" href="https://steamdb.info/" rel="nofollow noopener noreferrer">
+        <i class="fa-brands fa-steam" aria-hidden="true" title="SteamDB"></i>
+        <span class="sr-only">SteamDB</span>
       </a>
     </div>
   </main>
