Cloudflare Zero Trust WARP

--- a/index.html
+++ b/index.html
@@ -223,6 +223,12 @@
         <i class="fa-brands fa-steam" aria-hidden="true" title="SteamDB"></i>
         <span class="sr-only">SteamDB</span>
       </a>
+      <a target="_blank"
+        href="https://developers.cloudflare.com/cloudflare-one/connections/connect-devices/warp/download-warp/"
+        rel="nofollow noopener noreferrer">
+        <i class="fa-brands fa-cloudflare" aria-hidden="true" title="Cloudflare Zero Trust WARP"></i>
+        <span class="sr-only">Cloudflare Zero Trust WARP</span>
+      </a>
     </div>
   </main>
 </body>
