Nanyang Sin-Chew Lianhe Zaobao

--- a/index.html
+++ b/index.html
@@ -212,8 +212,9 @@
         <span class="sr-only">CyberChef</span>
       </a>
       <a target="_blank" href="https://www.zaobao.com/" rel="nofollow noopener noreferrer">
-        <i class="fa-solid fa-newspaper" aria-hidden="true" title="联合早报"></i>
-        <span class="sr-only">联合早报</span>
+        <!--No AD and paywall on .com site.-->
+        <i class="fa-solid fa-newspaper" aria-hidden="true" title="Nanyang Sin-Chew Lianhe Zaobao"></i>
+        <span class="sr-only">Nanyang Sin-Chew Lianhe Zaobao</span>
       </a>
       <a target="_blank" href="https://www.kaspersky.com/free-antivirus" rel="nofollow noopener noreferrer">
         <i class="fa-solid fa-k" aria-hidden="true" title="Kaspersky Free Antivirus"></i>
