--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@
   <script>
     /* ---- particles.js config ---- */
     particlesJS("particles-js", {
+      "fps_limit": 60,
       "particles": {
         "number": {
           "value": 30,
