--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
             "mode": "grab"
           },
           "onclick": {
-            "enable": false,
+            "enable": true,
             "mode": "push"
           },
           "resize": true
