--- a/index.html
+++ b/index.html
@@ -113,19 +113,7 @@
       font-weight: 600;
     }
 
-    #content>.intro {
-      font-family: 'Reem Kufi', sans-serif;
-      font-size: 3.75em;
-      font-weight: 600;
-    }
-
     main>.tagline {
-      font-size: 1.5rem;
-      margin: 1.5rem 0;
-      font-weight: 100;
-    }
-
-    #content>.tagline {
       font-size: 1.5rem;
       margin: 1.5rem 0;
       font-weight: 100;
@@ -173,213 +161,76 @@
 
 <body>
   <main>
-    <div id="content">
-      <div class="intro">Hello, I'm Sunset!</div>
-      <div class="tagline">Amateur independent developer | Windows & Linux user | Gamer</div>
-      <!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
-      <div class="icons-social">
-        <a target="_blank" href="https://jekyll.lwd-temp.top/" rel="nofollow noopener noreferrer me" itemprop="sameAs">
-          <i class="fa-solid fa-blog" aria-hidden="true" title="Blog"></i>
-          <span class="sr-only">Blog</span>
-        </a>
-        <a target="_blank" href="https://github.com/lwd-temp" rel="nofollow noopener noreferrer me" itemprop="sameAs">
-          <i class="fa-brands fa-github" aria-hidden="true" title="GitHub"></i>
-          <span class="sr-only">GitHub</span>
-        </a>
-        <a target="_blank" href="https://gitlab.com/lwd-temp" rel="nofollow noopener noreferrer me" itemprop="sameAs">
-          <i class="fa-brands fa-gitlab" aria-hidden="true" title="GitLab"></i>
-          <span class="sr-only">GitLab</span>
-        </a>
-        <a target="_blank"
-          href="https://keyserver.ubuntu.com/pks/lookup?op=get&amp;search=0xafce72de15a64a20f9e731bbc8d10d21fdcb405a"
-          rel="nofollow noopener noreferrer me" itemprop="sameAs">
-          <i class="fa-solid fa-key" aria-hidden="true" title="PGP Public Key"></i>
-          <span class="sr-only">PGP Public Key</span>
-        </a>
-        <a target="_blank" href="mailto:i@lwd-temp.top" rel="nofollow noopener noreferrer me" itemprop="sameAs">
-          <i class="fa-solid fa-envelope" aria-hidden="true" title="Email"></i>
-          <span class="sr-only">Email</span>
-        </a>
-        <a target="_blank" href="https://contact.lwd-temp.top/" rel="nofollow noopener noreferrer me" itemprop="sameAs">
-          <i class="fa-solid fa-bolt-lightning" aria-hidden="true" title="Quick Contact Me Form"></i>
-          <span class="sr-only">Quick Contact Me Form</span>
-        </a>
-        <a target="_blank" href="https://status.lwd-temp.top/" rel="nofollow noopener noreferrer me" itemprop="sameAs">
-          <i class="fa-solid fa-heart-pulse" aria-hidden="true" title="Service Status"></i>
-          <span class="sr-only">Service Status</span>
-        </a>
-      </div>
-      <div class="tagline">Friends & Useful Links</div>
-      <div class="icons-social">
-        <a target="_blank" href="https://massgrave.dev/" rel="nofollow noopener noreferrer">
-          <i class="fa-brands fa-windows" aria-hidden="true" title="Microsoft Installation & Activation"></i>
-          <span class="sr-only">Microsoft Installation & Activation</span>
-        </a>
-        <a target="_blank" href="https://hmcl.huangyuhui.net/" rel="nofollow noopener noreferrer">
-          <i class="fa-solid fa-cube" aria-hidden="true" title="HMCL Launcher"></i>
-          <span class="sr-only">HMCL Launcher</span>
-        </a>
-        <a target="_blank" href="https://cyberchef.lwd-temp.top/" rel="nofollow noopener noreferrer">
-          <i class="fa-regular fa-chess-rook" aria-hidden="true" title="CyberChef"></i>
-          <span class="sr-only">CyberChef</span>
-        </a>
-        <a target="_blank" href="https://www.zaobao.com/" rel="nofollow noopener noreferrer">
-          <!--No AD and paywall on .com site.-->
-          <i class="fa-solid fa-newspaper" aria-hidden="true" title="Nanyang Sin-Chew Lianhe Zaobao"></i>
-          <span class="sr-only">Nanyang Sin-Chew Lianhe Zaobao</span>
-        </a>
-        <a target="_blank" href="https://www.kaspersky.com/free-antivirus" rel="nofollow noopener noreferrer">
-          <i class="fa-solid fa-k" aria-hidden="true" title="Kaspersky Free Antivirus"></i>
-          <span class="sr-only">Kaspersky Free Antivirus</span>
-        </a>
-        <a target="_blank" href="https://steamdb.info/" rel="nofollow noopener noreferrer">
-          <i class="fa-brands fa-steam" aria-hidden="true" title="SteamDB"></i>
-          <span class="sr-only">SteamDB</span>
-        </a>
-        <a target="_blank"
-          href="https://developers.cloudflare.com/cloudflare-one/connections/connect-devices/warp/download-warp/"
-          rel="nofollow noopener noreferrer">
-          <i class="fa-brands fa-cloudflare" aria-hidden="true" title="Cloudflare Zero Trust WARP"></i>
-          <span class="sr-only">Cloudflare Zero Trust WARP</span>
-        </a>
-      </div>
+    <div class="intro">Hello, I'm Sunset!</div>
+    <div class="tagline">Amateur independent developer | Windows & Linux user | Gamer</div>
+    <!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
+    <div class="icons-social">
+      <a target="_blank" href="https://jekyll.lwd-temp.top/" rel="nofollow noopener noreferrer me" itemprop="sameAs">
+        <i class="fa-solid fa-blog" aria-hidden="true" title="Blog"></i>
+        <span class="sr-only">Blog</span>
+      </a>
+      <a target="_blank" href="https://github.com/lwd-temp" rel="nofollow noopener noreferrer me" itemprop="sameAs">
+        <i class="fa-brands fa-github" aria-hidden="true" title="GitHub"></i>
+        <span class="sr-only">GitHub</span>
+      </a>
+      <a target="_blank" href="https://gitlab.com/lwd-temp" rel="nofollow noopener noreferrer me" itemprop="sameAs">
+        <i class="fa-brands fa-gitlab" aria-hidden="true" title="GitLab"></i>
+        <span class="sr-only">GitLab</span>
+      </a>
+      <a target="_blank"
+        href="https://keyserver.ubuntu.com/pks/lookup?op=get&amp;search=0xafce72de15a64a20f9e731bbc8d10d21fdcb405a"
+        rel="nofollow noopener noreferrer me" itemprop="sameAs">
+        <i class="fa-solid fa-key" aria-hidden="true" title="PGP Public Key"></i>
+        <span class="sr-only">PGP Public Key</span>
+      </a>
+      <a target="_blank" href="mailto:i@lwd-temp.top" rel="nofollow noopener noreferrer me" itemprop="sameAs">
+        <i class="fa-solid fa-envelope" aria-hidden="true" title="Email"></i>
+        <span class="sr-only">Email</span>
+      </a>
+      <a target="_blank" href="https://contact.lwd-temp.top/" rel="nofollow noopener noreferrer me" itemprop="sameAs">
+        <i class="fa-solid fa-bolt-lightning" aria-hidden="true" title="Quick Contact Me Form"></i>
+        <span class="sr-only">Quick Contact Me Form</span>
+      </a>
+      <a target="_blank" href="https://status.lwd-temp.top/" rel="nofollow noopener noreferrer me" itemprop="sameAs">
+        <i class="fa-solid fa-heart-pulse" aria-hidden="true" title="Service Status"></i>
+        <span class="sr-only">Service Status</span>
+      </a>
     </div>
-
-    <!-- particles.js container -->
-    <div id="particles-js"></div>
+    <div class="tagline">Friends & Useful Links</div>
+    <div class="icons-social">
+      <a target="_blank" href="https://massgrave.dev/" rel="nofollow noopener noreferrer">
+        <i class="fa-brands fa-windows" aria-hidden="true" title="Microsoft Installation & Activation"></i>
+        <span class="sr-only">Microsoft Installation & Activation</span>
+      </a>
+      <a target="_blank" href="https://hmcl.huangyuhui.net/" rel="nofollow noopener noreferrer">
+        <i class="fa-solid fa-cube" aria-hidden="true" title="HMCL Launcher"></i>
+        <span class="sr-only">HMCL Launcher</span>
+      </a>
+      <a target="_blank" href="https://cyberchef.lwd-temp.top/" rel="nofollow noopener noreferrer">
+        <i class="fa-regular fa-chess-rook" aria-hidden="true" title="CyberChef"></i>
+        <span class="sr-only">CyberChef</span>
+      </a>
+      <a target="_blank" href="https://www.zaobao.com/" rel="nofollow noopener noreferrer">
+        <!--No AD and paywall on .com site.-->
+        <i class="fa-solid fa-newspaper" aria-hidden="true" title="Nanyang Sin-Chew Lianhe Zaobao"></i>
+        <span class="sr-only">Nanyang Sin-Chew Lianhe Zaobao</span>
+      </a>
+      <a target="_blank" href="https://www.kaspersky.com/free-antivirus?ignoreredirects=true" rel="nofollow noopener noreferrer">
+        <i class="fa-solid fa-k" aria-hidden="true" title="Kaspersky Free Antivirus"></i>
+        <span class="sr-only">Kaspersky Free Antivirus</span>
+      </a>
+      <a target="_blank" href="https://steamdb.info/" rel="nofollow noopener noreferrer">
+        <i class="fa-brands fa-steam" aria-hidden="true" title="SteamDB"></i>
+        <span class="sr-only">SteamDB</span>
+      </a>
+      <a target="_blank"
+        href="https://developers.cloudflare.com/cloudflare-one/connections/connect-devices/warp/download-warp/"
+        rel="nofollow noopener noreferrer">
+        <i class="fa-brands fa-cloudflare" aria-hidden="true" title="Cloudflare Zero Trust WARP"></i>
+        <span class="sr-only">Cloudflare Zero Trust WARP</span>
+      </a>
+    </div>
   </main>
-
-  <style>
-    /* ---- particles.js container ---- */
-    #particles-js {
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      z-index: 0;
-    }
-
-    #content {
-      position: relative;
-      z-index: 1;
-    }
-  </style>
-
-  <!-- particles.js lib (JavaScript CodePen settings): https://github.com/VincentGarreau/particles.js -->
-  <script src="particles.js"></script>
-  <script>
-    /* ---- particles.js config ---- */
-    particlesJS("particles-js", {
-      "fps_limit": 60,
-      "particles": {
-        "number": {
-          "value": 50,
-          "density": {
-            "enable": true,
-            "value_area": 800
-          }
-        },
-        "color": {
-          "value": "#ffffff"
-        },
-        "shape": {
-          "type": "circle",
-          "stroke": {
-            "width": 0,
-            "color": "#000000"
-          },
-          "polygon": {
-            "nb_sides": 5
-          },
-          "image": {
-            "src": "img/github.svg",
-            "width": 100,
-            "height": 100
-          }
-        },
-        "opacity": {
-          "value": 0.5,
-          "random": false,
-          "anim": {
-            "enable": false,
-            "speed": 1,
-            "opacity_min": 0.1,
-            "sync": false
-          }
-        },
-        "size": {
-          "value": 5,
-          "random": true,
-          "anim": {
-            "enable": true,
-            "speed": 1,
-            "size_min": 0.1,
-            "sync": false
-          }
-        },
-        "line_linked": {
-          "enable": true,
-          "distance": 150,
-          "color": "#ffffff",
-          "opacity": 0.4,
-          "width": 1
-        },
-        "move": {
-          "enable": true,
-          "speed": 1,
-          "direction": "none",
-          "random": false,
-          "straight": false,
-          "out_mode": "out",
-          "bounce": false,
-          "attract": {
-            "enable": false,
-            "rotateX": 600,
-            "rotateY": 1200
-          }
-        }
-      },
-      "interactivity": {
-        "detect_on": "direct_canvas",
-        "events": {
-          "onhover": {
-            "enable": true,
-            "mode": "grab"
-          },
-          "onclick": {
-            "enable": true,
-            "mode": "push"
-          },
-          "resize": true
-        },
-        "modes": {
-          "grab": {
-            "distance": 140,
-            "line_linked": {
-              "opacity": 1
-            }
-          },
-          "bubble": {
-            "distance": 400,
-            "size": 40,
-            "duration": 2,
-            "opacity": 8,
-            "speed": 3
-          },
-          "repulse": {
-            "distance": 200,
-            "duration": 0.4
-          },
-          "push": {
-            "particles_nb": 4
-          },
-          "remove": {
-            "particles_nb": 2
-          }
-        }
-      },
-      "retina_detect": true
-    });
-  </script>
 </body>
 
 </html>
