Blue Archive Spine Viewer

--- a/index.html
+++ b/index.html
@@ -215,7 +215,8 @@
         <i class="fa-solid fa-newspaper" aria-hidden="true" title="Nanyang Sin-Chew Lianhe Zaobao"></i>
         <span class="sr-only">Nanyang Sin-Chew Lianhe Zaobao</span>
       </a>
-      <a target="_blank" href="https://www.kaspersky.com/free-antivirus?ignoreredirects=true" rel="nofollow noopener noreferrer">
+      <a target="_blank" href="https://www.kaspersky.com/free-antivirus?ignoreredirects=true"
+        rel="nofollow noopener noreferrer">
         <i class="fa-solid fa-k" aria-hidden="true" title="Kaspersky Free Antivirus"></i>
         <span class="sr-only">Kaspersky Free Antivirus</span>
       </a>
@@ -228,6 +229,10 @@
         rel="nofollow noopener noreferrer">
         <i class="fa-brands fa-cloudflare" aria-hidden="true" title="Cloudflare Zero Trust WARP"></i>
         <span class="sr-only">Cloudflare Zero Trust WARP</span>
+      </a>
+      <a target="_blank" href="https://ba.lwd-temp.top/" rel="nofollow noopener noreferrer">
+        <i class="fa-regular fa-circle" aria-hidden="true" title="Blue Archive Spine Viewer"></i>
+        <span class="sr-only">Blue Archive Spine Viewer</span>
       </a>
     </div>
   </main>
