--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         <i class="fa-brands fa-cloudflare" aria-hidden="true" title="Cloudflare Zero Trust WARP"></i>
         <span class="sr-only">Cloudflare Zero Trust WARP</span>
       </a>
-      <a target="_blank" href="https://ba.lwd-temp.top/" rel="nofollow noopener noreferrer">
+      <a target="_blank" href="https://jp.ba.lwd-temp.top/" rel="nofollow noopener noreferrer">
         <i class="fa-regular fa-circle" aria-hidden="true" title="Blue Archive Spine Viewer"></i>
         <span class="sr-only">Blue Archive Spine Viewer</span>
       </a>
