--- a/index.html
+++ b/index.html
@@ -1,241 +1,388 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sunset's Landing Page</title>
 
-  <title>Sunset's Landing Page</title>
+    <meta name="description" content="Sunset's Landing Page" />
+    <meta name="author" content="Sunset" />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:site_name" content="Sunset's Landing Page" />
+    <meta property="og:title" content="Sunset's Landing Page" />
+    <meta property="og:url" content="https://www.lwd-temp.top/" />
+    <meta property="og:description" content="Sunset's Landing Page" />
 
-  <meta name="description" content="Sunset's Landing Page">
-  <meta name="author" content="Sunset">
-  <meta property="og:type" content="website">
-  <meta property="og:locale" content="en_US">
-  <meta property="og:site_name" content="Sunset's Landing Page">
-  <meta property="og:title" content="Sunset's Landing Page">
-  <meta property="og:url" content="https://www.lwd-temp.top/">
-  <meta property="og:description" content="Sunset's Landing Page">
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link
+      href="https://unpkg.com/@fortawesome/fontawesome-free@6.4.2/css/all.css"
+      rel="stylesheet"
+    />
+    <!--<link rel="stylesheet" href="css/reset.css">-->
+    <style>
+      /* Minimal CSS Reset */
 
-  <link href="https://unpkg.com/@fortawesome/fontawesome-free@6.4.2/css/all.css" rel="stylesheet">
-  <!--<link rel="stylesheet" href="css/reset.css">-->
-  <style>
-    /* Minimal CSS Reset */
-
-    html {
-      box-sizing: border-box;
-      font-size: 12px;
-    }
-
-    *,
-    *:before,
-    *:after {
-      box-sizing: inherit;
-    }
-
-    body,
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6,
-    p,
-    ol,
-    ul {
-      margin: 0;
-      padding: 0;
-      font-weight: normal;
-    }
-
-    ol,
-    ul {
-      list-style: none;
-    }
-
-    img {
-      max-width: 100%;
-      height: auto;
-    }
-  </style>
-  <!--<link rel="stylesheet" href="css/styles.css">-->
-  <style>
-    /* Typography */
-
-    html {
-      font-family: 'Roboto', sans-serif;
-    }
-
-    @media (min-width: 576px) {
       html {
-        font-size: 14px;
+        box-sizing: border-box;
+        font-size: 12px;
       }
-    }
 
-    @media (min-width: 768px) {
+      *,
+      *:before,
+      *:after {
+        box-sizing: inherit;
+      }
+
+      body,
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6,
+      p,
+      ol,
+      ul {
+        margin: 0;
+        padding: 0;
+        font-weight: normal;
+      }
+
+      ol,
+      ul {
+        list-style: none;
+      }
+
+      img {
+        max-width: 100%;
+        height: auto;
+      }
+    </style>
+    <!--<link rel="stylesheet" href="css/styles.css">-->
+    <style>
+      /* Typography */
+
       html {
-        font-size: 16px;
+        font-family: "Roboto", sans-serif;
       }
-    }
 
-    @media (min-width: 992px) {
-      html {
-        font-size: 18px;
+      @media (min-width: 576px) {
+        html {
+          font-size: 14px;
+        }
       }
-    }
 
-    @media (min-width: 1200px) {
-      html {
-        font-size: 20px;
+      @media (min-width: 768px) {
+        html {
+          font-size: 16px;
+        }
       }
+
+      @media (min-width: 992px) {
+        html {
+          font-size: 18px;
+        }
+      }
+
+      @media (min-width: 1200px) {
+        html {
+          font-size: 20px;
+        }
+      }
+
+      .icons-social i {
+        font-size: 3em;
+      }
+
+      /* Custom Styles */
+
+      main {
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+        justify-content: center;
+        padding: 0 30px;
+        text-align: center;
+      }
+
+      main > .intro {
+        font-family: "Reem Kufi", sans-serif;
+        font-size: 3.75em;
+        font-weight: 600;
+      }
+
+      main > .tagline {
+        font-size: 1.5rem;
+        margin: 1.5rem 0;
+        font-weight: 100;
+      }
+
+      .icons-social i {
+        padding: 10px;
+      }
+
+      .icons-social a {
+        text-decoration: none;
+      }
+
+      .devto {
+        margin-bottom: -0.2rem;
+      }
+
+      .devto svg {
+        margin-bottom: -0.2rem;
+        margin-left: 0.675rem;
+        width: 2.65rem;
+        height: 2.65rem;
+      }
+    </style>
+    <!--<link rel="stylesheet" href="css/themes/white-grey.css">-->
+    <style>
+      /* Theme */
+
+      main {
+        background: #485564;
+        color: #fafafa;
+      }
+
+      .icons-social a {
+        color: #fafafa;
+      }
+
+      .icons-social a svg path {
+        fill: #fafafa;
+      }
+    </style>
+
+    <style>
+      /* Source: http://barchok.com/flags.html */
+      .pride {
+        background: linear-gradient(
+          180deg,
+          #fe0000 16.66%,
+          #fd8c00 16.66%,
+          33.32%,
+          #ffe500 33.32%,
+          49.98%,
+          #119f0b 49.98%,
+          66.64%,
+          #0644b3 66.64%,
+          83.3%,
+          #c22edc 83.3%
+        );
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+      }
+    </style>
+
+    <script
+      async
+      src="https://sense.lwd-temp.top/sense"
+      data-website-id="ad86100d-eaf0-4b30-af01-520917413f3d"
+    ></script>
+  </head>
+
+  <body>
+    <main>
+      <div class="intro">Hello, I'm Sunset!</div>
+      <div class="tagline">
+        Amateur independent developer | Windows & Linux user | Gamer
+      </div>
+      <!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
+      <div class="icons-social">
+        <a
+          target="_blank"
+          href="https://jekyll.lwd-temp.top/"
+          rel="nofollow noopener noreferrer me"
+          itemprop="sameAs"
+        >
+          <i class="fa-solid fa-blog" aria-hidden="true" title="Blog"></i>
+          <span class="sr-only">Blog</span>
+        </a>
+        <a
+          target="_blank"
+          href="https://github.com/lwd-temp"
+          rel="nofollow noopener noreferrer me"
+          itemprop="sameAs"
+        >
+          <i class="fa-brands fa-github" aria-hidden="true" title="GitHub"></i>
+          <span class="sr-only">GitHub</span>
+        </a>
+        <a
+          target="_blank"
+          href="https://gitlab.com/lwd-temp"
+          rel="nofollow noopener noreferrer me"
+          itemprop="sameAs"
+        >
+          <i class="fa-brands fa-gitlab" aria-hidden="true" title="GitLab"></i>
+          <span class="sr-only">GitLab</span>
+        </a>
+        <a
+          target="_blank"
+          href="https://keyserver.ubuntu.com/pks/lookup?op=get&amp;search=0xafce72de15a64a20f9e731bbc8d10d21fdcb405a"
+          rel="nofollow noopener noreferrer me"
+          itemprop="sameAs"
+        >
+          <i
+            class="fa-solid fa-key"
+            aria-hidden="true"
+            title="PGP Public Key"
+          ></i>
+          <span class="sr-only">PGP Public Key</span>
+        </a>
+        <a
+          target="_blank"
+          href="mailto:i@lwd-temp.top"
+          rel="nofollow noopener noreferrer me"
+          itemprop="sameAs"
+        >
+          <i class="fa-solid fa-envelope" aria-hidden="true" title="Email"></i>
+          <span class="sr-only">Email</span>
+        </a>
+        <a
+          target="_blank"
+          href="https://contact.lwd-temp.top/"
+          rel="nofollow noopener noreferrer me"
+          itemprop="sameAs"
+        >
+          <i
+            class="fa-solid fa-bolt-lightning"
+            aria-hidden="true"
+            title="Quick Contact Me Form"
+          ></i>
+          <span class="sr-only">Quick Contact Me Form</span>
+        </a>
+        <a
+          target="_blank"
+          href="https://status.lwd-temp.top/"
+          rel="nofollow noopener noreferrer me"
+          itemprop="sameAs"
+        >
+          <i
+            class="fa-solid fa-heart-pulse"
+            aria-hidden="true"
+            title="Service Status"
+          ></i>
+          <span class="sr-only">Service Status</span>
+        </a>
+      </div>
+      <div class="tagline">Friends & Useful Links</div>
+      <div class="icons-social">
+        <a
+          target="_blank"
+          href="https://massgrave.dev/"
+          rel="nofollow noopener noreferrer"
+        >
+          <i
+            class="fa-brands fa-windows"
+            aria-hidden="true"
+            title="Microsoft Installation & Activation"
+          ></i>
+          <span class="sr-only">Microsoft Installation & Activation</span>
+        </a>
+        <a
+          target="_blank"
+          href="https://hmcl.huangyuhui.net/"
+          rel="nofollow noopener noreferrer"
+        >
+          <i
+            class="fa-solid fa-cube"
+            aria-hidden="true"
+            title="HMCL Launcher"
+          ></i>
+          <span class="sr-only">HMCL Launcher</span>
+        </a>
+        <a
+          target="_blank"
+          href="https://cyberchef.lwd-temp.top/"
+          rel="nofollow noopener noreferrer"
+        >
+          <i
+            class="fa-regular fa-chess-rook"
+            aria-hidden="true"
+            title="CyberChef"
+          ></i>
+          <span class="sr-only">CyberChef</span>
+        </a>
+        <a
+          target="_blank"
+          href="https://www.zaobao.com/"
+          rel="nofollow noopener noreferrer"
+        >
+          <!--No AD and paywall on .com site.-->
+          <i
+            class="fa-solid fa-newspaper"
+            aria-hidden="true"
+            title="Nanyang Sin-Chew Lianhe Zaobao"
+          ></i>
+          <span class="sr-only">Nanyang Sin-Chew Lianhe Zaobao</span>
+        </a>
+        <a
+          target="_blank"
+          href="https://www.kaspersky.com/free-antivirus?ignoreredirects=true"
+          rel="nofollow noopener noreferrer"
+        >
+          <i
+            class="fa-solid fa-k"
+            aria-hidden="true"
+            title="Kaspersky Free Antivirus"
+          ></i>
+          <span class="sr-only">Kaspersky Free Antivirus</span>
+        </a>
+        <a
+          target="_blank"
+          href="https://steamdb.info/"
+          rel="nofollow noopener noreferrer"
+        >
+          <i class="fa-brands fa-steam" aria-hidden="true" title="SteamDB"></i>
+          <span class="sr-only">SteamDB</span>
+        </a>
+        <a
+          target="_blank"
+          href="https://developers.cloudflare.com/cloudflare-one/connections/connect-devices/warp/download-warp/"
+          rel="nofollow noopener noreferrer"
+        >
+          <i
+            class="fa-brands fa-cloudflare"
+            aria-hidden="true"
+            title="Cloudflare Zero Trust WARP"
+          ></i>
+          <span class="sr-only">Cloudflare Zero Trust WARP</span>
+        </a>
+        <a
+          target="_blank"
+          href="https://ba.lwd-temp.top/"
+          rel="nofollow noopener noreferrer"
+        >
+          <i
+            class="fa-regular fa-circle"
+            aria-hidden="true"
+            title="Blue Archive Spine Viewer"
+          ></i>
+          <span class="sr-only">Blue Archive Spine Viewer</span>
+        </a>
+      </div>
+    </main>
+  </body>
+
+  <script>
+    try {
+      // June 28th
+      if (new Date().getDate() === 28 && new Date().getMonth() === 5) {
+        console.log("%c%s", "font-size:10em;", "🏳️‍🌈");
+        const main = document.querySelector("main");
+        main.classList.add("pride");
+      }
+    } catch (e) {
+      console.error(e);
     }
-
-    .icons-social i {
-      font-size: 3em;
-    }
-
-    /* Custom Styles */
-
-    main {
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-      justify-content: center;
-      padding: 0 30px;
-      text-align: center;
-    }
-
-    main>.intro {
-      font-family: 'Reem Kufi', sans-serif;
-      font-size: 3.75em;
-      font-weight: 600;
-    }
-
-    main>.tagline {
-      font-size: 1.5rem;
-      margin: 1.5rem 0;
-      font-weight: 100;
-    }
-
-    .icons-social i {
-      padding: 10px;
-    }
-
-    .icons-social a {
-      text-decoration: none;
-    }
-
-    .devto {
-      margin-bottom: -0.20rem;
-    }
-
-    .devto svg {
-      margin-bottom: -0.20rem;
-      margin-left: 0.675rem;
-      width: 2.65rem;
-      height: 2.65rem;
-    }
-  </style>
-  <!--<link rel="stylesheet" href="css/themes/white-grey.css">-->
-  <style>
-    /* Theme */
-
-    main {
-      background: #485564;
-      color: #FAFAFA;
-    }
-
-    .icons-social a {
-      color: #FAFAFA;
-    }
-
-    .icons-social a svg path {
-      fill: #FAFAFA;
-    }
-  </style>
-
-  <script async src="https://sense.lwd-temp.top/sense" data-website-id="ad86100d-eaf0-4b30-af01-520917413f3d"></script>
-</head>
-
-<body>
-  <main>
-    <div class="intro">Hello, I'm Sunset!</div>
-    <div class="tagline">Amateur independent developer | Windows & Linux user | Gamer</div>
-    <!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
-    <div class="icons-social">
-      <a target="_blank" href="https://jekyll.lwd-temp.top/" rel="nofollow noopener noreferrer me" itemprop="sameAs">
-        <i class="fa-solid fa-blog" aria-hidden="true" title="Blog"></i>
-        <span class="sr-only">Blog</span>
-      </a>
-      <a target="_blank" href="https://github.com/lwd-temp" rel="nofollow noopener noreferrer me" itemprop="sameAs">
-        <i class="fa-brands fa-github" aria-hidden="true" title="GitHub"></i>
-        <span class="sr-only">GitHub</span>
-      </a>
-      <a target="_blank" href="https://gitlab.com/lwd-temp" rel="nofollow noopener noreferrer me" itemprop="sameAs">
-        <i class="fa-brands fa-gitlab" aria-hidden="true" title="GitLab"></i>
-        <span class="sr-only">GitLab</span>
-      </a>
-      <a target="_blank"
-        href="https://keyserver.ubuntu.com/pks/lookup?op=get&amp;search=0xafce72de15a64a20f9e731bbc8d10d21fdcb405a"
-        rel="nofollow noopener noreferrer me" itemprop="sameAs">
-        <i class="fa-solid fa-key" aria-hidden="true" title="PGP Public Key"></i>
-        <span class="sr-only">PGP Public Key</span>
-      </a>
-      <a target="_blank" href="mailto:i@lwd-temp.top" rel="nofollow noopener noreferrer me" itemprop="sameAs">
-        <i class="fa-solid fa-envelope" aria-hidden="true" title="Email"></i>
-        <span class="sr-only">Email</span>
-      </a>
-      <a target="_blank" href="https://contact.lwd-temp.top/" rel="nofollow noopener noreferrer me" itemprop="sameAs">
-        <i class="fa-solid fa-bolt-lightning" aria-hidden="true" title="Quick Contact Me Form"></i>
-        <span class="sr-only">Quick Contact Me Form</span>
-      </a>
-      <a target="_blank" href="https://status.lwd-temp.top/" rel="nofollow noopener noreferrer me" itemprop="sameAs">
-        <i class="fa-solid fa-heart-pulse" aria-hidden="true" title="Service Status"></i>
-        <span class="sr-only">Service Status</span>
-      </a>
-    </div>
-    <div class="tagline">Friends & Useful Links</div>
-    <div class="icons-social">
-      <a target="_blank" href="https://massgrave.dev/" rel="nofollow noopener noreferrer">
-        <i class="fa-brands fa-windows" aria-hidden="true" title="Microsoft Installation & Activation"></i>
-        <span class="sr-only">Microsoft Installation & Activation</span>
-      </a>
-      <a target="_blank" href="https://hmcl.huangyuhui.net/" rel="nofollow noopener noreferrer">
-        <i class="fa-solid fa-cube" aria-hidden="true" title="HMCL Launcher"></i>
-        <span class="sr-only">HMCL Launcher</span>
-      </a>
-      <a target="_blank" href="https://cyberchef.lwd-temp.top/" rel="nofollow noopener noreferrer">
-        <i class="fa-regular fa-chess-rook" aria-hidden="true" title="CyberChef"></i>
-        <span class="sr-only">CyberChef</span>
-      </a>
-      <a target="_blank" href="https://www.zaobao.com/" rel="nofollow noopener noreferrer">
-        <!--No AD and paywall on .com site.-->
-        <i class="fa-solid fa-newspaper" aria-hidden="true" title="Nanyang Sin-Chew Lianhe Zaobao"></i>
-        <span class="sr-only">Nanyang Sin-Chew Lianhe Zaobao</span>
-      </a>
-      <a target="_blank" href="https://www.kaspersky.com/free-antivirus?ignoreredirects=true"
-        rel="nofollow noopener noreferrer">
-        <i class="fa-solid fa-k" aria-hidden="true" title="Kaspersky Free Antivirus"></i>
-        <span class="sr-only">Kaspersky Free Antivirus</span>
-      </a>
-      <a target="_blank" href="https://steamdb.info/" rel="nofollow noopener noreferrer">
-        <i class="fa-brands fa-steam" aria-hidden="true" title="SteamDB"></i>
-        <span class="sr-only">SteamDB</span>
-      </a>
-      <a target="_blank"
-        href="https://developers.cloudflare.com/cloudflare-one/connections/connect-devices/warp/download-warp/"
-        rel="nofollow noopener noreferrer">
-        <i class="fa-brands fa-cloudflare" aria-hidden="true" title="Cloudflare Zero Trust WARP"></i>
-        <span class="sr-only">Cloudflare Zero Trust WARP</span>
-      </a>
-      <a target="_blank" href="https://jp.ba.lwd-temp.top/" rel="nofollow noopener noreferrer">
-        <i class="fa-regular fa-circle" aria-hidden="true" title="Blue Archive Spine Viewer"></i>
-        <span class="sr-only">Blue Archive Spine Viewer</span>
-      </a>
-    </div>
-  </main>
-</body>
-
+  </script>
 </html>
