--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
       xhr.onreadystatechange = () => {
         if (xhr.readyState === 4 && xhr.status === 200) {
           const data = JSON.parse(xhr.responseText);
-          const twitter = document.querySelector(".twitter");
+          const twitter = document.getElementById("twitter");
           twitter.href = `${data.url}`;
           twitter.removeAttribute("style");
         }
