The MSD Manuals

--- a/index.html
+++ b/index.html
@@ -384,6 +384,18 @@
           ></i>
           <span class="sr-only">Blue Archive Spine Viewer</span>
         </a>
+        <a
+          target="_blank"
+          href="https://www.msdmanuals.com/"
+          rel="nofollow noopener noreferrer"
+        >
+          <i
+            class="fa-solid fa-book-medical"
+            aria-hidden="true"
+            title="The MSD Manuals"
+          ></i>
+          <span class="sr-only">The MSD Manuals</span>
+        </a>
       </div>
     </main>
   </body>
