--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link
       href="https://unpkg.com/@fortawesome/fontawesome-free@6.4.2/css/all.css"
       rel="stylesheet"
+      crossorigin="anonymous"
     />
     <!--<link rel="stylesheet" href="css/reset.css">-->
     <style>
@@ -395,6 +396,34 @@
             title="The MSD Manuals"
           ></i>
           <span class="sr-only">The MSD Manuals</span>
+        </a>
+        <a
+          target="_blank"
+          href="https://www.xzc-meina.top/"
+          rel="nofollow noopener noreferrer"
+        >
+          <i class="fa-solid fa-user" aria-hidden="true" title="Mori Meina"></i>
+          <span class="sr-only">Mori Meina</span>
+        </a>
+        <a
+          target="_blank"
+          href="https://code.visualstudio.com/"
+          rel="nofollow noopener noreferrer"
+        >
+          <i
+            class="fa-regular fa-file-code"
+            aria-hidden="true"
+            title="Visual Studio Code"
+          ></i>
+          <span class="sr-only">Visual Studio Code</span>
+        </a>
+        <a
+          target="_blank"
+          href="https://codeium.com/"
+          rel="nofollow noopener noreferrer"
+        >
+          <i class="fa-solid fa-code" aria-hidden="true" title="Codeium"></i>
+          <span class="sr-only">Codeium</span>
         </a>
       </div>
     </main>
