--- a/index.html
+++ b/index.html
@@ -19,10 +19,19 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
     <link
+      rel="preload"
       href="https://unpkg.com/@fortawesome/fontawesome-free@6.4.2/css/all.css"
-      rel="stylesheet"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
       crossorigin="anonymous"
     />
+    <noscript
+      ><link
+        rel="stylesheet"
+        href="https://unpkg.com/@fortawesome/fontawesome-free@6.4.2/css/all.css"
+        crossorigin="anonymous"
+    /></noscript>
+
     <!--<link rel="stylesheet" href="css/reset.css">-->
     <style>
       /* Minimal CSS Reset */
