https://www.kaspersky.com/downloads/free-antivirus

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
         </a>
         <a
           target="_blank"
-          href="https://www.kaspersky.com/free-antivirus?ignoreredirects=true"
+          href="https://www.kaspersky.com/downloads/free-antivirus?ignoreredirects=true"
           rel="nofollow noopener noreferrer"
         >
           <i
