--- a/404.html
+++ b/404.html
@@ -184,9 +184,9 @@
 
       // 一个列表，包含要测试的域名，和对应的名称
       var domains = [
-        ["https://jekyll.lwd-temp.top/", "Blog page"],
-        ["https://jekyll2.lwd-temp.top/", "Blog page (Backup)"],
-        ["https://wd.lwd-temp.top/", "Wikidot Page (Deprecated)"],
+        ["https://jekyll.lwd-temp.top", "Blog page"],
+        ["https://jekyll2.lwd-temp.top", "Blog page (Backup)"],
+        ["https://wd.lwd-temp.top", "Wikidot Page (Deprecated)"],
       ];
 
       // 一个异步函数，遍历列表，调用checkURLUnderDomain
