--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
           itemprop="sameAs"
         >
           <i
-            class="fa-solid fa-bolt-lightning"
+            class="fa-solid fa-inbox"
             aria-hidden="true"
             title="Quick Contact Me Form"
           ></i>
