--- a/404.html
+++ b/404.html
@@ -176,8 +176,8 @@
           var li = document.createElement("li");
           var a = document.createElement("a");
           // Remove cors prefix from URL
-          if (url.startsWith("https://cors.lwd-temp.top/")) {
-            url = url.replace("https://cors.lwd-temp.top/", "");
+          if (url.startsWith("https://cors.lwd-temp.top/?")) {
+            url = url.replace("https://cors.lwd-temp.top/?", "");
           }
           a.href = url;
           a.innerText = name;
@@ -191,7 +191,7 @@
         ["https://jekyll.lwd-temp.top", "Blog page"],
         ["https://jekyll2.lwd-temp.top", "Blog page (Backup)"],
         [
-          "https://cors.lwd-temp.top/https://wd.lwd-temp.top",
+          "https://cors.lwd-temp.top/?https://wd.lwd-temp.top",
           "Wikidot Page (Deprecated)",
         ],
       ];
