General GitHub Pages

--- a/404.html
+++ b/404.html
@@ -194,6 +194,7 @@
           "https://cors.lwd-temp.top/?https://wd.lwd-temp.top",
           "Wikidot Page (Deprecated)",
         ],
+        ["https://gh.lwd-temp.top", "General GitHub Pages"],
       ];
 
       // 一个异步函数，遍历列表，调用checkURLUnderDomain
