if urlPath not ends with /

--- a/404.html
+++ b/404.html
@@ -203,7 +203,15 @@
         for (var i = 0; i < domains.length; i++) {
           var url = domains[i][0] + urlPath;
           var name = domains[i][1];
-          await checkURLUnderDomain(url, name);
+          checkURLUnderDomain(url, name);
+        }
+        // if urlPath not ends with /
+        if (!urlPath.endsWith("/")) {
+          for (var i = 0; i < domains.length; i++) {
+            var url = domains[i][0] + urlPath + "/";
+            var name = domains[i][1] + " (with /)";
+            checkURLUnderDomain(url, name);
+          }
         }
       }
 
