--- a/index.html
+++ b/index.html
@@ -441,6 +441,20 @@
           <i class="fa-solid fa-code" aria-hidden="true" title="Codeium"></i>
           <span class="sr-only">Codeium</span>
         </a>
+        <a
+          target="_blank"
+          href="https://www.gnu.org/home.en.html"
+          rel="nofollow noopener noreferrer"
+        >
+          <i
+            class="fa-solid fa-cow"
+            aria-hidden="true"
+            title="The GNU Operating System and the Free Software Movement"
+          ></i>
+          <span class="sr-only"
+            >The GNU Operating System and the Free Software Movement</span
+          >
+        </a>
       </div>
     </main>
   </body>
