--- a/index.html
+++ b/index.html
@@ -455,6 +455,18 @@
             >The GNU Operating System and the Free Software Movement</span
           >
         </a>
+        <a
+          target="_blank"
+          href="https://duckduckgo.com/?kae=-1&kp=-2&kn=1&k1=-1&kax=-1&kak=-1&kap=-1&kaq=-1&kao=-1&kau=-1&kc=-1&kg=p&k18=1"
+          rel="nofollow noopener noreferrer"
+        >
+          <i
+            class="fa-solid fa-magnifying-glass"
+            aria-hidden="true"
+            title="DuckDuckGo"
+          ></i>
+          <span class="sr-only">DuckDuckGo</span>
+        </a>
       </div>
     </main>
   </body>
