--- a/index.html
+++ b/index.html
@@ -775,6 +775,10 @@
     }
 
     // 每毫秒更新一次时间
-    requestAnimationFrame(updateTime);
+    // requestAnimationFrame(updateTime);
   </script>
+  <script
+    src="https://code.tidio.co/0ukqgzqkpj1nrecogctd5l9odsffo3hz.js"
+    async
+  ></script>
 </html>
