--- a/index.html
+++ b/index.html
@@ -469,6 +469,18 @@
           ></i>
           <span class="sr-only">DuckDuckGo</span>
         </a>
+        <a
+          target="_blank"
+          href="https://mail.960923.xyz/"
+          rel="nofollow noopener noreferrer"
+        >
+          <i
+            class="fa-solid fa-envelope"
+            aria-hidden="true"
+            title="Temp Mail"
+          ></i>
+          <span class="sr-only">Temp Mail</span>
+        </a>
       </div>
     </main>
   </body>
